--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/faviconn.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="All Transport Solutions" />
   <link rel="apple-touch-icon" href="faviconn.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
